# fastAPI-design-project

./: .env.example  .gitignore  API_DESIGN_PRINCIPLES.md  ARCHITECTURE.md  DAY_1_SUMMARY.md  README.md  SETUP_GUIDE.md  main.py  pyproject.toml
app/: __init__.py  mcp_tools.py  models.py  rag.py
app/api/: routes.py
app/core/: config.py
data/: uiuc_airfoils.csv
scripts/: load_data.py
tests/: test_api.py  test_mcp_tools.py  test_rag.py
