[project]
name = "wing-aerodynamic-analyzer"
version = "0.1.0"
description = "Front wing aerodynamic impact analyzer using RAG and MCP tools"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
	{name = "Your Name", email = "you@example.com"}
]
dependencies = [
	"fastapi>=0.109.0",
	"uvicorn[standard]>=0.27.0",
	"pydantic>=2.5.0",
	"pydantic-settings>=2.1.0",
	"openai>=1.3.0",
	"chromadb>=0.4.18",
	"python-dotenv>=1.0.0",
	"requests>=2.31.0",
	"pandas>=2.1.0",
	"pytest>=7.4.0",
	"pytest-asyncio>=0.21.0",
	"httpx>=0.25.0"
]

[project.optional-dependencies]
dev = [
	"black>=23.12.0",
	"isort>=5.13.0",
	"pytest-cov>=4.1.0",
	"mypy>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = false
warn_unused_ignores = true
